--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@ ul#menu li a {
 <body>
 
 
-<h2>Water Polo</h2>
-
+<p alighn="left"><fontcolor = "teal">
+Water Polo	
+</fontcolor>
+</p>
 <a href="http://www.usawaterpolo.org/">
 <img src="waterPolo.jpg" alt="Water Polo" style="width:304px;height:228px;">
 </a>
 
-<p align="left"><font face = "Georgia" color = "teal">
+<p align="left"><font color = "teal">
 Hiking
 </font>
 </p>
@@ -62,7 +64,10 @@ Hiking
 </a>
 
 
-<h2>Light Saber Fighting</h2>
+<p align="left"><font color = "teal">
+Light Saber Fighting
+</font>
+</p>
 <a href="http://starwars.wikia.com/wiki/Lightsaber">
 <img src="lightSaber.jpg" alt="Jedi Mind Tricks" style="width:304px;height:228px;">
 </a>
