--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ul#menu li a {
 <body>
 
 
-<p alighn="left"><fontcolor = "teal">
+<p align="left"><fontcolor = "teal">
 Water Polo	
 </fontcolor>
 </p>
