--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ ul#menu li a {
 
 <p align="left"><fontcolor = "teal">
 Water Polo	
-</fontcolor>
+</font>
 </p>
 <a href="http://www.usawaterpolo.org/">
 <img src="waterPolo.jpg" alt="Water Polo" style="width:304px;height:228px;">
