--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ ul#menu li a {
 Water Polo	
 </font>
 </p>
-<a href="http://www.usawaterpolo.org/">
+<a href="waterPolo.html">
 <img src="waterPolo.jpg" alt="Water Polo" style="width:304px;height:228px;">
 </a>
 
