--- a/waterPolo.html
+++ b/waterPolo.html
@@ -31,8 +31,6 @@ ul#menu li a {
 <style type="text/css"></style></head>
 <body>
 
-<h1>Kaylee Jones</h1>
-
 <!DOCTYPE html>
 <html>
 <body>
@@ -54,6 +52,7 @@ and end up liking water polo better.
 Best played when sunny, but doesn't stop one from playing it in the rain, snow, etc. Remember to get out of the water asap when
 there is a thunder storm.
 
+</p></font>
 </body>
 </html>
 
