--- a/waterPolo.html
+++ b/waterPolo.html
@@ -36,12 +36,14 @@ ul#menu li a {
 <body>
 
 
-<p align="left"><font size = 14>
+<p align="left"><font size = "14">
 Water Polo	
 </font>
 </p>
-<p align = "left"><font size = 8>
+
+<p align = "left"><font size = "8">
 <b>Equipment: </b> <i>water polo swim suit, goal cage, swim cap, water polo cap, sunscreen</i>
+<p></p>
 <b>Weather:</b> <i>Anything but lightning. Literally, anything.</i>
 <p></p>
 <b>The Experience</b><p></p>
