--- a/waterPolo.html
+++ b/waterPolo.html
@@ -46,7 +46,7 @@ Water Polo
 <p></p>
 <b>Weather:</b> <i>Anything but lightning. Literally, anything.</i>
 <p></p>
-<b>The Experience</b><p></p>
+<b>The Experience</b>
 Although the name may mislead one to think that it is played with horses,
 Water Polo is a contact-sport that is like hockey, but in the water. Many take up the sport to keep in shape for competitive swimming,
 and end up liking water polo better.
