--- a/waterPolo.html
+++ b/waterPolo.html
@@ -36,20 +36,21 @@ ul#menu li a {
 <body>
 
 
-<p align="left"><font size = "14">
+<p align="left"><font size="14">
 Water Polo	
 </font>
 </p>
 
-<p align = "left"><font size = "8">
+<p align = "left"><font size="8">
 <b>Equipment: </b> <i>water polo swim suit, goal cage, swim cap, water polo cap, sunscreen</i>
 <p></p>
 <b>Weather:</b> <i>Anything but lightning. Literally, anything.</i>
 <p></p>
 <b>The Experience</b>
-Although the name may mislead one to think that it is played with horses,
+<p>Although the name may mislead one to think that it is played with horses,
 Water Polo is a contact-sport that is like hockey, but in the water. Many take up the sport to keep in shape for competitive swimming,
 and end up liking water polo better.
+</p>
 <p></p>
 Best played when sunny, but doesn't stop one from playing it in the rain, snow, etc. Remember to get out of the water asap when
 there is a thunder storm.
