--- a/waterPolo.html
+++ b/waterPolo.html
@@ -36,9 +36,8 @@ ul#menu li a {
 <body>
 
 
-<p align="left"><font size="14">
+<p align="left" style="font-size:160%;">
 Water Polo	
-</font>
 </p>
 
 <p align = "left"><font size="8">
@@ -46,7 +45,9 @@ Water Polo
 <p></p>
 <b>Weather:</b> <i>Anything but lightning. Literally, anything.</i>
 <p></p>
+<p>
 <b>The Experience</b>
+</p>
 <p>Although the name may mislead one to think that it is played with horses,
 Water Polo is a contact-sport that is like hockey, but in the water. Many take up the sport to keep in shape for competitive swimming,
 and end up liking water polo better.
