--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Water Polo
 Hiking
 </font>
 </p>
-<a href="https://utah.com/hiking/provo-trails">
+<a href="hiking.html">
 <img src="hiking.jpg" alt="Hiking" style="width:304px;height:228px;">
 </a>
 
