--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Hiking
 Light Saber Fighting
 </font>
 </p>
-<a href="http://starwars.wikia.com/wiki/Lightsaber">
+<a href="lightSaber.html">
 <img src="lightSaber.jpg" alt="Jedi Mind Tricks" style="width:304px;height:228px;">
 </a>
 
